<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ll_poetry"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/poetry_bg"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/rl_top"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/poetry_top_bg" >

        <Button
            android:id="@+id/btn_favour"
            android:layout_width="wrap_content"
            android:layout_height="36dip"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="4dip"
            android:background="@drawable/top"
            android:paddingLeft="10dip"
            android:paddingRight="10dip"
            android:text="@string/favour"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_page_name"
            android:layout_width="wrap_content"
            android:layout_height="36dip"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_clear"
            android:layout_width="wrap_content"
            android:layout_height="36dip"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="4dip"
            android:background="@drawable/top"
            android:paddingLeft="10dip"
            android:paddingRight="10dip"
            android:text="@string/clear"
            android:textColor="@color/black"
            android:textSize="16sp" />
    </RelativeLayout>

    <ScrollView
        android:id="@+id/sv_poetries"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:id="@+id/ll_poetries"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
        </LinearLayout>
    </ScrollView>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/tips_poetry"
        android:textColor="@color/gray"
        android:textSize="14sp" />

</LinearLayout>