<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/poetry_bg"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/rl_top"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/poetry_top_bg" >

        <Button
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="36dip"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="4dip"
            android:background="@drawable/top"
            android:paddingLeft="10dip"
            android:paddingRight="10dip"
            android:text="@string/back"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_page_name"
            android:layout_width="wrap_content"
            android:layout_height="36dip"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:text="@string/favour"
            android:textColor="@color/dark_red"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_delete"
            android:layout_width="wrap_content"
            android:layout_height="36dip"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="4dip"
            android:background="@drawable/top"
            android:paddingLeft="10dip"
            android:paddingRight="10dip"
            android:text="@string/delete"
            android:textColor="@color/black"
            android:textSize="16sp" />
    </RelativeLayout>

    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <ScrollView
            android:id="@+id/sv_favours"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <LinearLayout
                android:id="@+id/ll_favours"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >
            </LinearLayout>
        </ScrollView>

        <SlidingDrawer
            android:id="@+id/sd_about"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:content="@+id/content"
            android:handle="@+id/handle"
            android:orientation="horizontal" >

            <RelativeLayout
                android:id="@+id/handle"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent" >

                <Button
                    android:layout_width="8dip"
                    android:layout_height="fill_parent"
                    android:background="@color/pink" />
            </RelativeLayout>

            <LinearLayout
                android:id="@+id/content"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/poetry_bg"
                android:gravity="center_horizontal"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dip"
                    android:drawableTop="@drawable/poetry_logo_150"
                    android:gravity="center"
                    android:text="@string/app_name"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/tv_version"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/dark_black"
                    android:textSize="14sp" />
                
                <Button
                    android:id="@+id/btn_check_update"
                    android:layout_width="150dip"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dip"
                    android:text="@string/check_update"
                    android:textSize="16sp"
                    android:textColor="@color/dark_black"
                    android:background="@drawable/button_cancel"/>

                <TextView
                    android:id="@+id/tv_weibo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dip"
                    android:text="@string/weibo"
                    android:textColor="@color/blue"
                    android:textSize="16sp" />
            </LinearLayout>
        </SlidingDrawer>
    </FrameLayout>

</LinearLayout>