<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="210dip"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dip"
    android:background="@drawable/dialog_bg"
    android:gravity="right"
    android:orientation="vertical"
    android:padding="3dip" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dip"
        android:layout_marginRight="5dip"
        android:layout_marginTop="5dip"
        android:layout_marginBottom="5dip" >

        <ImageView
            android:id="@+id/dialog_title_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:background="@drawable/dialog_inf"
            android:contentDescription="@string/app_name" />

        <TextView
            android:id="@+id/tv_tips"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dip"
            android:layout_toRightOf="@id/dialog_title_image"
            android:textColor="@color/black"
            android:textSize="16sp" />
    </RelativeLayout>

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/dialog_split"
        android:contentDescription="@string/app_name" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dip" >

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="80dip"
            android:layout_height="wrap_content"
            android:background="@drawable/button_cancel"
            android:text="@string/cancel"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btn_ok"
            android:layout_width="80dip"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:background="@drawable/button_ok"
            android:text="@string/ok"
            android:textColor="@color/black"
            android:textSize="16sp" />
    </RelativeLayout>

</LinearLayout>