<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" >

    <LinearLayout
        android:id="@+id/ll_share"
        android:layout_width="300dip"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
        android:background="@drawable/dialog_bg"
        android:gravity="right"
        android:orientation="vertical"
        android:padding="3dip" >

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dip" >

            <ImageView
                android:id="@+id/dialog_title_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:background="@drawable/weibosdk_logo"
                android:contentDescription="@string/app_name" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dip"
                android:layout_toRightOf="@id/dialog_title_image"
                android:text="@string/tips_share"
                android:textColor="@color/black"
                android:textSize="18sp" />
        </RelativeLayout>

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/dialog_split"
            android:contentDescription="@string/app_name" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
           	android:background="@drawable/dialog_text_bg"
           	android:orientation="vertical"
            android:layout_margin="5dip" >

            <EditText
                android:id="@+id/et_share"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:gravity="top"
                android:hint="@string/tips_share"
                android:minLines="4"
                android:padding="3dip"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tv_num"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dip"
                android:layout_marginBottom="3dip"
                android:textColor="@color/blue"
                android:text="@string/weibo_max_num" />
        </LinearLayout>

        <Button
            android:id="@+id/btn_share"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dip"
            android:layout_marginRight="5dip"
            android:background="@drawable/button_share"
            android:text="@string/share"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_close"
        android:layout_width="25dip"
        android:layout_height="25dip"
        android:layout_marginLeft="-15dip"
        android:layout_toRightOf="@id/ll_share"
        android:background="@drawable/dialog_close" />

</RelativeLayout>